# DeepMedChem

./: .dockerignore  .gitignore  Dockerfile.railway  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: alignment.py  config.py  fingerprints.py  main.py  models.py  properties.py
backend/tests/: test_alignment.py  test_api.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts
frontend/e2e/: viewer.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ErrorBanner.tsx  FingerprintView.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  InputPanel.tsx  PropertiesPanel.tsx  ResultsTable.tsx  StatsPanel.tsx  Viewer3D.tsx
frontend/src/hooks/: useAlignment.ts  useProperties.ts
frontend/src/types/: 3dmol.d.ts  api.ts
