[project]
name = "deepmedchem"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "deepchem>=2.8.0",
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "pydantic-settings>=2.13.1",
    "rdkit>=2025.9.6",
    "torch>=2.0.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
